<resources>
    <string name="app_name">Android_316294321</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="pause_text">Toggle Pause</string>
    <string name="fire_name">Fire</string>
    <string name="water_name">Water</string>
    <string name="air_name">Air</string>
    <string name="earth_name">Earth</string>
    <string name="import_text">Import</string>
    <string name="email_text">E-Mail Address</string>
    <string name="password_text">Password</string>
    <string name="register_text">Register</string>
    <string name="login_text">Login</string>
    <string name="sounds_text">Sounds</string>
    <string name="anon_text">Not logged in.</string>
</resources>