<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="36dp"
        android:paddingVertical="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/labelForEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/editTextTextEmailAddress"
            android:text="@string/email_text" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:autofillHints="@string/email_text"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/labelForPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:labelFor="@id/editTextTextPassword"
            android:text="@string/password_text" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:autofillHints="@string/password_text"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSubmitRegister"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="120dp"
            android:text="@string/register_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>